--- a/BomOfferOrder/UI/Admin/PermissionFrm.resx
+++ b/BomOfferOrder/UI/Admin/PermissionFrm.resx
@@ -164,4 +164,7 @@
         8l/FYwIYQ4UGBWBgAAC+0b+zuQxOnAAAAABJRU5ErkJggg==
 </value>
   </data>
+  <metadata name="Menu.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>198, 18</value>
+  </metadata>
 </root>
